# delivery_project

./: .gitignore  README.md
order_service/: alembic.ini  pyproject.toml  settings.yml
order_service/app/: main.py
order_service/app/application/: app.py  background.py
order_service/app/infrastructure/base/: singleton.py
user_service/: alembic.ini  pyproject.toml  settings.local.yml  settings.yml
user_service/src/: main.py
user_service/src/api/routers/: user_router.py
user_service/src/application/: app.py  background.py
user_service/src/application/admin/: views.py
user_service/src/application/service/: auth.py  user.py
user_service/src/application/tasks/: generate_ch_tables_task.py
user_service/src/domain/user/: interface.py  models.py
user_service/src/infrastructure/amqp/broker/: kafka.py
user_service/src/infrastructure/base/mixin/: broker_mixin.py
user_service/src/infrastructure/database/gateways/: alchemy_gateway.py  clickhouse_gateway.py
user_service/src/infrastructure/database/migrations/: env.py
user_service/src/infrastructure/database/migrations/versions/: 0001_init_models.py
user_service/src/infrastructure/database/models/: __init__.py  association.py  base.py  permission.py  role.py  user.py
user_service/src/infrastructure/exceptions/: token_exceptions.py  user_exceptions.py
user_service/src/infrastructure/repositories/: user_repository.py
user_service/src/infrastructure/server/: provider.py  server.py
user_service/src/infrastructure/utils/asyncio_utils/: __init__.py  run_in_executor.py  safe_gather.py  scheduled_task.py
(+8 files in other folders)
