[tool.poetry]
name = "user-service"
version = "0.0.2"
description = ""
authors = ["timmashkov <bodomizer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
aiokafka = "^0.12.0"
uvicorn = "^0.32.0"
redis = "^5.2.0"
clickhouse-driver = "^0.2.9"
orjson = "^3.10.11"
dynaconf = "^3.2.6"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
pyjwt = "^2.9.0"
pypika = "^0.48.9"
tenacity = "^9.0.0"
fastapi-filter = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
